Remove Warnings & Optimize Code
- Inline variables
- Remove unused Methods & Classes
- Update visibility of variables
- shorten Methods by extracting specific build steps
- optimize imports
- introduce lambdas